// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`args and flags > answers 1`] = `
"ℹ Output destination directory: \\".\\"

🐶 Generated 2 files!

     ✔ static.txt
     ✔ dir/.txt
"
`;

exports[`args and flags > dry-run 1`] = `
"ℹ Output destination directory: \\".\\"

───┬────────────────────────────────────────────────────────
 ✔ │ File: static.txt
───┼────────────────────────────────────────────────────────
 1 │ static content

───┬────────────────────────────────────────────────────────
 ✔ │ File: dir/scaffdog.txt
───┼────────────────────────────────────────────────────────
 1 │ scaffdog

🐶 Generated 2 files!

     ✔ static.txt
     ✔ dir/scaffdog.txt
"
`;

exports[`args and flags > force 1`] = `
"ℹ Output destination directory: \\".\\"

🐶 Generated 2 files!

     ✔ static.txt
     ✔ dir/scaffdog.txt
"
`;

exports[`args and flags > no documents 1`] = `
"
 ERROR  Document file not found. Please use $ scaffdog create <name> to create the document file.

"
`;

exports[`args and flags > not found 1`] = `
"
 ERROR  Document \\"not-found\\" not found.

"
`;

exports[`args and flags > output 1`] = `
"ℹ Output destination directory: \\"src/dir/nest\\"

🐶 Generated 1 file!

     ✔ src/dir/nest/file.txt
"
`;

exports[`prompt > magic pattern and destination autocomplete 1`] = `
"
🐶 Generated 1 file!

     ✔ dirB/static.txt
"
`;

exports[`prompt > name 1`] = `
"ℹ Output destination directory: \\".\\"

🐶 Generated 2 files!

     ✔ static.txt
     ✔ dir/scaffdog.txt
"
`;

exports[`prompt > overwrite files 1`] = `
"ℹ Output destination directory: \\".\\"

🐶 Generated 1 file! (1 skipped)

     ✔ static.txt
     ⚠ dir/scaffdog.txt (skipped)
"
`;
